# featomic

./: CITATION.cff  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
docs/: requirements.txt
featomic/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  build.rs
featomic-c-api/: CMakeLists.txt  Cargo.toml
featomic-torch/: CHANGELOG.md  CMakeLists.txt  Cargo.toml
featomic-torch-v0.6.1/: .buildinfo  index.html  searchindex.js
featomic-torch-v0.6.2/: .buildinfo  index.html  searchindex.js
featomic-torch-v0.7.0/: objects.inv  searchindex.js
featomic-torch-v0.7.1/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
featomic-torch-v0.7.2/: genindex.html  index.html  search.html  searchindex.js
featomic-torch-v0.7.3/: genindex.html  index.html  search.html  searchindex.js
featomic-torch-v0.7.4/: cite.html  genindex.html  objects.inv  searchindex.js
featomic-torch-v0.7.4-rc1/: genindex.html  searchindex.js
featomic-torch-v0.7.4-rc2/: index.html  search.html  searchindex.js
featomic-torch-v0.7.5/: searchindex.js
featomic-v0.6.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
featomic/benches/: lode-spherical-expansion.rs  soap-power-spectrum.rs  soap-spherical-expansion.rs
featomic/cmake/: dev-versions.cmake  featomic-config.in.cmake
featomic/examples/: compute-soap.c  compute-soap.cpp  compute-soap.rs  profiling.c  profiling.cpp  profiling.rs
featomic/examples/common/: systems.c  utils.c  utils.h
featomic/include/: featomic.hpp
featomic/src/: calculator.rs  lib.rs
featomic/src/c_api/: calculator.rs  logging.rs  profiling.rs  status.rs  system.rs
featomic/src/calculators/: atomic_composition.rs  dummy_calculator.rs  mod.rs  neighbor_list.rs  sorted_distances.rs  tests_utils.rs
featomic/src/calculators/bondatom/: bond_atom_math.rs  mod.rs  spherical_expansion_bondcentered.rs
featomic/src/calculators/lode/: spherical_expansion.rs
featomic/src/calculators/lode/radial_integral/: gto.rs
featomic/src/calculators/shared/: descriptors_by_systems.rs
featomic/src/calculators/shared/basis/radial/: tabulated.rs
featomic/src/calculators/soap/: power_spectrum.rs  radial_spectrum.rs  spherical_expansion.rs  spherical_expansion_pair.rs
featomic/src/calculators/soap/radial_integral/: gto.rs
featomic/src/labels/: keys.rs
featomic/src/labels/samples/: atom_centered.rs  long_range.rs  mod.rs
featomic/src/math/: hyp2f1.rs  spherical_harmonics.rs
featomic/src/systems/: chemfiles.rs  mod.rs  neighbors.rs
featomic/src/tutorials/moments/: moments.rs  s2_metadata.rs  s3_compute_3.rs  s3_compute_4.rs  s3_compute_5.rs
featomic/src/types/: vectors.rs
featomic/tests/: CMakeLists.txt  lode-madelung.rs  lode-spherical-expansion.rs  lode-vs-soap.rs  soap-power-spectrum.rs  soap-spherical-expansion.rs
featomic/tests/c/: CMakeLists.txt  calculator.cpp
featomic/tests/cmake-project/: CMakeLists.txt
featomic/tests/cxx/: calculator.cpp
featomic/tests/data/: mod.rs  spherical-harmonics.py
featomic/tests/utils/: helpers.cpp
(+4498 files in other folders)
